--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ body{margin:0;min-height:100vh;font-family:system-ui,-apple-system,BlinkMacSyste
 
   /* NEW: map image as base layer */
   background-image:
-    url("file:///C:/Users/LPP.Dylan.Brown/Documents/Test/skyrim-map.jpg"),
+    url("skyrim-map.jpg"),
     radial-gradient(circle at 10% 0,rgba(248,250,252,.15),transparent 70%),
     linear-gradient(145deg,#292524,#1f2937);
   background-size:cover, 100% 100%, 100% 100%;
@@ -5361,3 +5361,4 @@ init();
 </script>
 </body>
 </html>
+
