--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Norther Path Skyrim RPG</title>
+  <title>Northern Path Skyrim RPG</title>
 
   <!-- Mobile viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- PWA: theme + manifest -->
+  <!-- PWA -->
   <meta name="theme-color" content="#000000" />
   <link rel="manifest" href="manifest.json" />
-</head>
-<meta charset="UTF-8">
-<title>The Northern Path • Skyrim-Style HTML RPG</title>
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&display=swap" rel="stylesheet">
-<style>
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <style>
+     /* ALL your CSS here */
+
   /* ...all your existing CSS... */
 
   /* ---------------------------------
@@ -5361,4 +5362,5 @@ init();
 </script>
 </body>
 </html>
+
 
