--- a/index.html
+++ b/index.html
@@ -5351,6 +5351,8 @@ if (!STATE.player.shouts || !Array.isArray(STATE.player.shouts.known) || !STATE.
 }
 init();
 })();
+</script>
+  
 <script>
   if ("serviceWorker" in navigator) {
     window.addEventListener("load", () => {
@@ -5362,5 +5364,6 @@ init();
 </script>
 </body>
 </html>
+
 
 
