--- a/index.html
+++ b/index.html
@@ -2,22 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Northern Path Skyrim RPG</title>
+  <title>The Northern Path • Skyrim-Style HTML RPG</title>
 
   <!-- Mobile viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- PWA -->
+  <!-- PWA: theme + manifest -->
   <meta name="theme-color" content="#000000" />
   <link rel="manifest" href="manifest.json" />
+
+  <!-- iOS PWA support -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Northern Path">
+
+  <!-- Icons (same ones you have in /icons) -->
+  <link rel="apple-touch-icon" sizes="192x192" href="icons/icon-192.png">
+  <link rel="apple-touch-icon" sizes="512x512" href="icons/icon-512.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="icons/icon-192.png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
-     /* ALL your CSS here */
-
-  /* ...all your existing CSS... */
+  /* your existing CSS starts here … */
 
   /* ---------------------------------
      📱 MOBILE LAYOUT TWEAKS
@@ -5364,6 +5372,7 @@ init();
 </script>
 </body>
 </html>
+
 
 
 
