--- a/index.html
+++ b/index.html
@@ -25,8 +25,82 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
-  /* your existing CSS starts here … */
+  
+/* --------- SPLASH SCREEN ---------- */
+#splash-screen {
+  position: fixed;
+  inset: 0;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background:
+    radial-gradient(circle at top, rgba(148,163,184,0.25), transparent 55%),
+    radial-gradient(circle at bottom, rgba(15,23,42,0.9), #000);
+  /* subtle map in the background if you like */
+  background-image:
+    radial-gradient(circle at top, rgba(148,163,184,0.25), transparent 55%),
+    url("skyrim-map.jpg");
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: multiply;
+  color: #e5e7eb;
+  font-family: "Cinzel", serif;
+  transition: opacity 500ms ease, transform 500ms ease;
+}
 
+#splash-screen.splash-hidden {
+  opacity: 0;
+  pointer-events: none;
+  transform: scale(1.03);
+}
+
+.splash-inner {
+  text-align: center;
+  padding: 24px 18px;
+  max-width: 420px;
+  background: linear-gradient(
+    to bottom,
+    rgba(15,23,42,0.9),
+    rgba(2,6,23,0.98)
+  );
+  border-radius: 16px;
+  border: 1px solid rgba(148,163,184,0.5);
+  box-shadow: 0 25px 50px rgba(0,0,0,0.75);
+}
+
+.splash-logo {
+  font-size: 1.6rem;
+  letter-spacing: 0.18em;
+  text-transform: uppercase;
+  margin-bottom: 8px;
+  text-shadow: 0 0 14px rgba(148, 163, 184, 0.9);
+}
+
+.splash-subtitle {
+  font-size: 0.9rem;
+  color: #cbd5f5;
+  margin-bottom: 14px;
+}
+
+.splash-divider {
+  width: 120px;
+  height: 1px;
+  margin: 0 auto 14px;
+  background: linear-gradient(
+    to right,
+    transparent,
+    rgba(148,163,184,0.8),
+    transparent
+  );
+}
+
+.splash-hint {
+  font-size: 0.8rem;
+  color: #9ca3af;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+}
   /* ---------------------------------
      📱 MOBILE LAYOUT TWEAKS
      ---------------------------------*/
@@ -451,6 +525,15 @@ body{margin:0;min-height:100vh;font-family:system-ui,-apple-system,BlinkMacSyste
 </style>
 </head>
 <body>
+  <div id="splash-screen">
+    <div class="splash-inner">
+      <div class="splash-logo">❄ Northern Path ❄</div>
+      <div class="splash-subtitle">A Skyrim-style journey through the frozen north</div>
+      <div class="splash-divider"></div>
+      <div class="splash-hint">Loading your destiny...</div>
+    </div>
+  </div>
+ 
 <div id="race-modal">
   <div class="race-modal-inner">
     <h2>Choose Your Race</h2>
@@ -5292,7 +5375,12 @@ function setupMobileControls() {
     }
   });
 }
-
+function hideSplashScreen() {
+  const s = document.getElementById("splash-screen");
+  if (s) {
+    s.classList.add("splash-hidden");
+  }
+}
 function init(){
   const loaded = loadGame();
 
@@ -5356,6 +5444,7 @@ if (!STATE.player.shouts || !Array.isArray(STATE.player.shouts.known) || !STATE.
     rescaleCompanion(compInit);
   }
   fullUpdate();
+  hideSplashScreen();
 }
 init();
 })();
@@ -5372,6 +5461,7 @@ init();
 </script>
 </body>
 </html>
+
 
 
 
