--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
   <meta name="theme-color" content="#000000" />
   <link rel="manifest" href="manifest.json" />
 
-  <!-- iOS PWA support -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Northern Path">
+ <!-- Enable standalone mode on both iOS + Android -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="mobile-web-app-capable" content="yes">
+
+<!-- iOS styling -->
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-title" content="Northern Path">
 
   <!-- Icons (same ones you have in /icons) -->
   <link rel="apple-touch-icon" sizes="192x192" href="icons/icon-192.png">
@@ -5647,6 +5650,7 @@ init();
 </script>
 </body>
 </html>
+
 
 
 
