--- a/index.html
+++ b/index.html
@@ -2600,12 +2600,16 @@ function updateBars() {
     mhMText.textContent = `${p.magicka} / ${p.maxMagicka}`;
   }
   if (mhComp) {
-    if (comp && comp.maxHealth > 0) {
-      mhComp.textContent = `${comp.name} ${comp.health} / ${comp.maxHealth}`;
-    } else {
-      mhComp.textContent = "No companion";
-    }
+  if (comp && comp.maxHealth > 0) {
+    const stanceLabel = companionStanceLabel
+      ? companionStanceLabel(comp)
+      : (comp.stance || "Balanced");
+    mhComp.textContent =
+      `${comp.name} [${stanceLabel}] ${comp.health} / ${comp.maxHealth}`;
+  } else {
+    mhComp.textContent = "No companion";
   }
+}
 
   // Reputation + resources (these were already in your original function)
   updateHudReputation();
@@ -5650,6 +5654,7 @@ init();
 </script>
 </body>
 </html>
+
 
 
 
